# Hackathon-1-complete-book-with-chatbot

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md
.claude/: settings.local.json
.claude/agents/: adaptive-learner.md  educational-content-enhancer.md  nextjs-frontend-architect.md  rag-qa-agent.md  security-privacy-guardian.md  ui-ux-recommender.md  urdu-bilingual-translator.md
.claude/skills/book-content/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/content-organizer/: SKILL.md
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  diagnostics.py  health_check.py  init_db.py  init_db_new.py  init_qdrant.py  init_simple_db.py  pyproject.toml  requirements.txt  ructor.yaml  test_intent_classifier.py  test_output.txt  test_qdrant.py  test_retrieval.py
backend/scripts/: ingest_docs.py
backend/src/: main.py
backend/src/api/: chat.py  query.py  user.py
backend/src/core/: config.py  database.py  logging_config.py  vector_db.py
backend/src/models/: base.py  conversation.py  document.py  document_reference.py  user.py
backend/src/schemas/: conversation.py  document.py  responses.py  user.py
backend/src/services/: base.py  chat_service.py  conversation_service.py  embedding_service.py  retrieval_service.py  user_service.py
backend/src/utils/: intent_classifier.py
backend/tests/: test_api.py
specs/004-docusaurus-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-robotics-course-specs/: spec.md  tasks.md
specs/3-book-website-ui/: plan.md  tasks.md  ui-spec.md
(+14 files in other folders)
