[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "cohere>=5.20.0",
    "fastapi==0.104.1",
    "pydantic-settings==2.1.0",
    "qdrant-client>=1.16.2",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
